# Discretely-Indexed-Flows

./: .gitignore  README.md  euler_dif.sav  euler_em.sav  euler_samples.sav  images.py  requirements.txt  setup.cfg  setup.py  test_cov.py
experiments/: Conditional Density Estimation DIF.ipynb  Density Estimation.ipynb  Gradient Computation Time.ipynb  Images.ipynb  Mixed Models _ Real NVP S Curve.ipynb  Start from EM.ipynb  TMC-Copy1.ipynb  TMC.ipynb  Variational Inference-Copy1.ipynb  Variational Inference.ipynb  [DONE] DIF_DENSITY_ESTIMATOR.ipynb  [DONE] DIF_Sharp_Edges.ipynb  [DONE] Loss.ipynb  [DONE] Pavage.ipynb  [WORK IN PROGRESS] DIF DIGIT.ipynb  [WORK IN PROGRESS] DIF MNIST.ipynb  [WORK IN PROGRESS] GMM MNIST.ipynb  [WORK IN PROGRESS] Mixed Models .ipynb  [WORK IN PROGRESS] Mixed Models _ Two Moons.ipynb  [WORK IN PROGRESS] TMC MNIST.ipynb  images.py
models/: __init__.py  dif_density_estimator.py  dif_sampler.py  em_density_estimator.py  generalized_multivariate_normal_reference.py  location_scale.py  location_scale_flow.py  mixed_models_density_estimator.py  mixed_models_sampler.py  multivariate_normal_reference.py  pavage.py  softmax_nn.py  softmax_weight.py  softmax_weight_over.py  tmc.py
models_dif/: __init__.py  dif_conditional_density_estimator.py  dif_density_estimator.py  dif_sampler.py  invertible_mappings.py  location_scale_flow.py  multivariate_normal_reference.py  reference_distributions.py  softmax_weight.py  tmc.py  weight_functions.py
targets/: __init__.py  conditional_target_distributions.py  target_distributions.py
utils/: color_visual.py
(+43 files in other folders)
