[metadata]
name = Discretely-Indexed-Flows
packages = models
author = Elouan ARGOUARCH

[options]
packages = models_dif
setup_requires = wheel
install_requires =
    torch
    tqdm
    jupyter
    matplotlib
    seaborn
    ExpectationMaximisation @ git+https://github.com/ElouanARGOUARCH/ExpectationMaximisation.git
    TargetExamples @ git+https://github.com/ElouanARGOUARCH/TargetExamples.git
