[metadata]
name = Discretely-Indexed-Flows
packages = models_dif
author = Elouan ARGOUARCH

[options]
packages = models_dif
setup_requires = wheel
install_requires =
    torch
    tqdm
    ExpectationMaximisation @ git+https://github.com/ElouanARGOUARCH/ExpectationMaximisation.git
    TargetExamples @ git+https://github.com/ElouanARGOUARCH/TargetExamples.git
